--- a/src/styles/AppStyle/Class.scss
+++ b/src/styles/AppStyle/Class.scss
@@ -1,24 +1,37 @@
-.absolute{
-    position: absolute;
-    top: 0;
-}
-.inline{
-    display: inline;
-  }
+.absolute{ position: absolute;top: 0;}
+.inline{display: inline;}
+.none{display: none;}
   .Tap{
     .Page{        padding: 17vh 5.3vw;}
     .BG{min-width: 100vw !important; height: 60vh !important; }
     .Tools{display: none;}
-    .Navbar{justify-content: center;.Link{font-size: 3.4vw;} }
+    .Navbar{justify-content:center;.Link{font-size: 3.4vw;} }
     .Top{flex-direction: column;align-items: center;  margin-bottom:0 ;}
-    .LeftSec_Top{h1,h2{font-size: 7vw !important; text-align: center; margin: auto ;}
-    h3{font-size: 5vw !important; text-align: center; } margin-bottom: 4vh;}
+    .LeftSec_Top{h1,h2{font-size: min( 6vw , max(7vw ,5vh) ) !important; text-align: center; margin: auto ;}
+    h3{font-size: 4vw !important; text-align: center; } margin-bottom: 4vh;}
     .LeftSec_Mid,.LeftSec_Down{display: none;}
-    .SocialMedia{flex-direction: row;padding: 18vh 6vw; 
+    .SocialMedia{flex-direction: row;padding: 18vh 11vw; 
       justify-content: space-between;  width: 100vw;
     .SocialMediaB{flex-direction: column-reverse;}  
+    
     .Icon{font-size: 2.5vh;} .Ibra{height: 5vh;} }
-    .Home_RightSec{ height: 38vw !important;  ;
+    .Home_RightSec{ height: max(25vw,25vh) !important;  ;
     }
+    .Mid_Item{
+      font-size: 2.4vw ;
+      margin-bottom: 1vh;
 
   }
+ 
+  .Down_Item{
+    height : 13vw;
+}
+  }
+.BigTap{
+  .Down_Item{
+    height : 17vh;
+}
+.Down_Items{
+  height:  20vh;
+}
+}
