--- a/src/styles/AppStyle/Import.scss
+++ b/src/styles/AppStyle/Import.scss
@@ -13,7 +13,17 @@
 @import '../Layout/Top.scss';
 @import '../Layout/Down.scss';
 @import '../Home/Home_Mid.scss';
-
-
 @import '../Home/HomeSec.scss';
-@import './Class.scss';
+@import '../Home/Class.scss';
+
+@import '../Services/Services_Mid.scss';
+@import '../Services/ServicesSec.scss';
+@import '../Services/Class.scss';
+
+@import '../Contact/Contact_Mid.scss';
+@import '../Contact/ContactSec.scss';
+@import '../Contact/Class.scss';
+
+@import '../Team/Team_Mid.scss';
+@import '../Team/TeamSec.scss';
+@import '../Team/Class.scss';
