--- a/src/styles/Layout/Down.scss
+++ b/src/styles/Layout/Down.scss
@@ -2,7 +2,7 @@
   
     width: 100vw;
     max-width: 100vw;
-    background: url('../../image/Home/BG_Down.png');
+    // background: url('../../image/Home/BG_Down.png');
     background-size: cover;
     background-repeat: no-repeat;
     transform: translateX(-5.3vw);
