--- a/src/styles/Contact/Contact_Mid.scss
+++ b/src/styles/Contact/Contact_Mid.scss
@@ -1,10 +1,10 @@
 .Contact_Mid {
     @include Flex;
-    margin-bottom: min(5vh, 3vw);
+    margin-bottom: min(2vh, 1vw);
 
     .Mid_Item {
         img{
-                   height: clamp(3vh, 1.9vw, 3vw);
+                   width: 50vw !important;
                    object-fit: contain !important;
 
  
@@ -14,12 +14,5 @@
 
     
 
-    .Mid_Items {
-        @include Flex;
 
-        gap: 5vw;
-        margin-top: 0;
-        margin-inline: min(3vw);
-
-    }
 }
