--- a/src/styles/Contact/ContactSec.scss
+++ b/src/styles/Contact/ContactSec.scss
@@ -1,5 +1,5 @@
 .Contact_RightSec {
-  height: 25vw;
+  height: 22vw;
   z-index: 9999;
 }
 
@@ -10,7 +10,7 @@
 
   .LeftSec_Top {
     width:clamp(50vh,30vw,70vh);
-    margin-bottom: 1vh;
+    min-height: 23vh;
 
     h3 {
       font-weight: bold;
@@ -21,7 +21,7 @@
 
     h4 {
       font-weight: bold;
-      font-size:  clamp(3vw, 4vw, 6.4vh);
+      font-size:  clamp(3vw, 5vw, 7vh);
       display: inline;
       margin-bottom: 1vh;
 
@@ -35,12 +35,14 @@
 
   .LeftSec_Mid {
     max-width: 33vw;
+    margin: 2vh;
+
 
   }
 
   h6{
     text-transform: lowercase;
-    font-size: max(1.2vw, 1.2vh);
+    font-size: max(1.5vw, 1.5vh);
 
     width: 90%;
     word-spacing: 7px;
