--- a/src/styles/Team/Team_Mid.scss
+++ b/src/styles/Team/Team_Mid.scss
@@ -4,7 +4,7 @@
 
     .Mid_Item {
         img{
-                   height: 3vw;
+                   width: max(80vw,140vh);
                    object-fit: contain !important;
                     
  
