--- a/src/styles/AppStyle/App.scss
+++ b/src/styles/AppStyle/App.scss
@@ -3,3 +3,6 @@
 body{ background: var(--bg); overflow: hidden; max-width: 100vw; max-height: 100vh; }
 a{color: inherit; font-weight: bold;}
 html{background-color: var(--bg); }
+.absolute{ position: absolute;top: 0;}
+.inline{display: inline;}
+.none{display: none;}
