--- a/src/styles/Services/Class.scss
+++ b/src/styles/Services/Class.scss
@@ -80,7 +80,6 @@ margin-top: 5vw;
     .Services_Mid{
        .Mid_Item{
       margin-bottom: 1vh;
-      height: 4vw;
       img{
       width: 97vw;
 
@@ -107,7 +106,7 @@ margin-top: 5vw;
 
     img{
 
-    min-width: 65vh !important;
+    min-height: 11vw !important;
 
 }
 } 
