--- a/src/styles/AppStyle/App.scss
+++ b/src/styles/AppStyle/App.scss
@@ -23,7 +23,7 @@ html{background-color: var(--bg); }
 }
 .PageAnim{
     transition:ease-in-out;
-    animation: Anim 2s ease-in-out;
+    animation: Anim .5s ease-in-out;
     
 
 }
@@ -35,22 +35,12 @@ html{background-color: var(--bg); }
 @keyframes Anim{
   0% {
     width: 100vw;
+    scale: 1;
    }
-  
-   25% {
-    width: 115vw;
-    ;
 
-   }
- 
-   75% {
-    width: 135vw;
-
-   }
   
    100% {
-    width: 145vw;
-
+    scale: 2;
    }
   
 }
@@ -82,3 +72,58 @@ opacity: 0;
     bottom: 0;
     height: 100vh;
 }
+.Hiden{
+    opacity: 0;
+}
+.Lap_Tran{
+    position: absolute;
+    animation: Lap_Tran 2s ease-in-out;
+    left: 40vw;
+    top: -40vh;
+
+
+
+}
+@keyframes Lap_Tran{
+    from {
+        top: 0;
+        rotate: 60deg;
+        left: 0;
+
+     }
+    
+  
+    
+     to {
+        top: -40vh;
+        rotate: 0deg;
+        left: 40vw;
+
+     }
+    
+  }
+  .Lap_Tran2{
+    animation: Lap_Tran2 1.4s ease-in-out;
+
+
+  }
+  @keyframes Lap_Tran2{
+    from {
+        rotate: 0deg;
+
+     }
+    
+  
+    
+     to {
+        
+        // rotate: 7200deg;
+        scale: 5;
+transform: translateY(1vh);
+     }
+    
+  }
+  .Lap_Tran3{
+opacity: .8;
+
+  }
