--- a/src/styles/AppStyle/Import.scss
+++ b/src/styles/AppStyle/Import.scss
@@ -7,7 +7,6 @@
 
 @import '../Layout/Navbar.scss';
 @import '../../utils/BtnDarkMood/BtnDarkMood.scss';
-@import '../../utils/BtnLung/BtnLung.scss';
 @import'../Layout/Socilamedia.scss';
 @import '../Layout/Page.scss';
 @import '../Layout/Top.scss';
@@ -15,6 +14,7 @@
 @import '../Home/Home_Mid.scss';
 @import '../Home/HomeSec.scss';
 @import '../Home/Class.scss';
+@import '../Home/HomeAM.scss';
 
 @import '../Services/Services_Mid.scss';
 @import '../Services/ServicesSec.scss';
