--- a/src/styles/Home/HomeSec.scss
+++ b/src/styles/Home/HomeSec.scss
@@ -41,11 +41,12 @@
             font-size: max(1.2vw, 1.2vh);
 
             width: 80%;
-            word-spacing: 7px;
+            word-spacing: 1vh;
         }
     }
     .LeftSec_Down{
         width: max-content;
+        max-height: 2vw;
         button{
             text-align: center;
             padding: .4vw .2vw;
